# seshy

./: .gitignore  .gitignore alias  .gitignore alias 2  Makefile  README.md  gitignore
.github/workflows/: deploy-api.yml  terraform-apply.yml
apps/: README.md
apps/iOS/EventsApp/: EventsApp.swift  Info.plist
apps/iOS/EventsApp.xcodeproj/: project.pbxproj
apps/iOS/EventsAppTests/: EventComposerStateSummaryTests.swift  EventTimeConsistencyTests.swift
docs/: README.md
infra/: README.md  backend.tf
infra/cloudrun/: README.md  artifact-registry.tf  cloud-run.tf  outputs.tf  service-account.tf  variables.tf  versions.tf
services/: README.md
services/api/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/api/alembic/: README  env.py
services/api/alembic/versions/: .gitkeep  20241119_0000_initial_schema.py  20241119_0001_seed_default_vibes.py
services/api/app/: __init__.py  database.py  main.py  models.py  schemas.py
services/api/app/routers/: __init__.py  events.py  invites.py  media.py  members.py  notifications.py  payments.py  places.py  tickets.py  vibes.py
services/api/app/seed_data/: __init__.py  default_vibes.py
services/api/app/services/: __init__.py  stripe_service.py  vibe_seed.py
services/auth/: Dockerfile  README.md  pyproject.toml
services/auth/app/: __init__.py  main.py
services/backend/: .dockerignore  Dockerfile  docker-compose.yml
services/backend/app/: database.py  init.py  main.py  models.py
services/fingerprint/: .dockerignore  README.md  pyproject.toml
(+300 files in other folders)
